--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>fr.arsleust</groupId>
 	<artifactId>SimpleZIPWorldRestorer</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>2.0.1-lagnat-SNAPSHOT</version>
 	<name>SimpleZIPWorldRestorer</name>
 
 	<repositories>
